Added integration tests Declared transformation for eventGeom